--- a/msvc/10.0/testPowerPMACcontrolLib.vcxproj
+++ b/msvc/10.0/testPowerPMACcontrolLib.vcxproj
@@ -15,6 +15,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
